--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,14 @@ body {
   align-items: center;
   margin-bottom: 30px;
 }
+
+.header h2 {
+  display: inline-block;
+  color: var(--tertiary-color);
+  font-family: Helvetica;
+  font-weight: 600;
+}
+
 nav ul {
   display: flex;
 }
@@ -67,6 +75,10 @@ nav ul li a:focus {
 }
 nav ul li a:focus:before {
   width: 0%;
+}
+
+nav ul li a {
+  cursor: pointer;
 }
 .search-btn {
   display: flex;
@@ -157,14 +169,15 @@ nav ul li a:focus:before {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
   font-weight: bold;
   border: 1px solid var(--primary-color);
   box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.5);
-  position: absolute;
-  right: 5px;
+  padding: 10px 0 0 13px;
+  /* position: absolute; */
+  /* right: 5px; */
   /* bottom: 5px; */
 }
 @media (max-width: 900px) {
