Add CSS to Login and Register | Fix functionallity in Homepage -Added utility classes to Login, Register and Movie components -Fixed issue in Navbar item links -Added trending movies of the day

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.bg-amoled {
+  background-color: #252529;
+}
+
+/* .font-logo {
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+} */
