--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins";
 }
 
 :root {
@@ -58,8 +58,8 @@ body {
 .header h2 {
   display: inline-block;
   color: var(--tertiary-color);
-  font-family: Helvetica;
-  font-weight: 600;
+  /* font-family: Helvetica; */
+  /* font-weight: 600; */
 }
 
 nav ul {
@@ -194,13 +194,15 @@ nav ul li a:focus:before {
   width: 35px;
   height: 35px;
   border-radius: 50%;
+  text-align: center;
+  padding-top: 5px;
   /* display: flex; */
   /* justify-content: center; */
   /* align-items: center; */
   font-weight: bold;
   border: 1px solid var(--primary-color);
   box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.5);
-  padding: 10px 0 0 13px;
+  /* padding: 10px 0 0 13px; */
   /* position: absolute; */
   /* right: 5px; */
   /* bottom: 5px; */
